--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_ADDR=localhost
+SERVER_ADDR=172.20.2.45
 SERVER_PORT=8080
 
 DB_ADDR=localhost
@@ -6,3 +6,6 @@ DB_PORT=3306
 DB_NAME=bpjs_db
 DB_USERNAME=root
 DB_PASSWORD=johan
+
+
+ADAPTER_URL=http://172.20.2.91:8080
